# IN4110

./: README.md  http_cache.sqlite
assignment1/: gitconflict.txt  myfirstcommit.txt
assignment2/: analyze_pollution_data.py
assignment2/analytic_tools/: utilities.py
assignment2/tests/: test_utilities.py
assignment3/: README.md  profile-report.md  pyproject.toml  setup.py
assignment3/in3110_instapy/: __init__.py  cli.py  cython_filters.c  cython_filters.html  cython_filters.py  numba_filters.py  numpy_filters.py  profiling.py  timing-report.txt  timing.py
assignment3/in3110_instapy.egg-info/: PKG-INFO  SOURCES.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: collect_dates.py  fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  pyproject.toml  requesting_urls.py  wiki_race_challenge.py
assignment4/tables_of_anniversaries/: anniversaries_April.md  anniversaries_August.md  anniversaries_December.md  anniversaries_February.md  anniversaries_January.md  anniversaries_July.md  anniversaries_June.md  anniversaries_March.md  anniversaries_May.md  anniversaries_November.md  anniversaries_October.md  anniversaries_September.md
assignment4/tests/: test_filter_urls.py  test_requesting_urls.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/tests/: http_cache.sqlite
